hphp/test/slow/typed_locals/exception_kind.php.expectf
Catchable fatal error: Expected string, got int in %s/hphp/test/slow/typed_locals/exception_kind.php on line 8
